fix: [PIE-5128]: overlapping of logs (#10867)

--- a/src/modules/70-pipeline/components/LogsContent/components/MultiLogLine/MultiLogLine.module.scss
+++ b/src/modules/70-pipeline/components/LogsContent/components/MultiLogLine/MultiLogLine.module.scss
@@ -15,7 +15,7 @@
   padding: 0 var(--spacing-5);
   border-radius: var(--spacing-2);
   line-height: 1.67;
-  height: 20px;
+  min-height: 20px;
 
   &:hover {
     background-color: var(--grey-800);
